# stratodb

./: .gitignore  .rustfmt.toml  CLAUDE.md  Cargo.toml  LICENSE  README.md
.circleci/: config.yml
.github/workflows/: claude-review.yml  update-milestone-on-release.yml
crates/stratodb/: Cargo.toml
crates/stratodb-derive/: Cargo.toml  README.md
crates/stratodb-derive/src/: convert.rs  desc.rs  expand_macro.rs  field_parts.rs  generics.rs  lib.rs  named_fields.rs  sdata_impl.rs
crates/stratodb-derive/src/attr/: container.rs  default.rs  field.rs  misc.rs  mod.rs  rename.rs  variant.rs
crates/stratodb-derive/src/enum_data/: accessors.rs  expand_macro.rs  load_arm.rs  mod.rs  repr.rs  store_arm.rs  variant_parts.rs
crates/stratodb-derive/src/index/: column_spec.rs  index_attr.rs  indexed_impl.rs  item.rs  mod.rs
crates/stratodb-derive/src/refs/: mod.rs  mut_type.rs  ref_type.rs
crates/stratodb/benches/: deletes.rs  dynamic_value.rs  indexes.rs  lists.rs  modifications.rs  reads.rs  writes.rs
crates/stratodb/benches/common/: mod.rs
crates/stratodb/examples/: basic.rs  indexed.rs
crates/stratodb/src/: cache.rs  codec.rs  constants.rs  datetime.rs  db.rs  error.rs  key.rs  lib.rs  node.rs  path.rs  table.rs  tree.rs  value.rs
crates/stratodb/src/access/: bound.rs  mem.rs  mod.rs  reader.rs  rooted.rs  writer.rs
crates/stratodb/src/codec/: mod.rs  putters.rs  reader.rs
crates/stratodb/src/data/: bignum.rs  bytes.rs  definition.rs  identifiable.rs  leaf_mut.rs  leaf_ref.rs  map.rs  mod.rs  opt.rs  scalar.rs  seq.rs  smut.rs  sref.rs  value.rs
crates/stratodb/src/db/: database.rs  inner.rs  mod.rs
crates/stratodb/src/engine/: archived.rs  backend.rs  errors.rs  functions.rs  mod.rs  table_defs.rs  table_key.rs  table_value.rs
crates/stratodb/src/export/: base64.rs  exporter.rs  json.rs  mod.rs  scalar.rs  string.rs  yaml.rs
crates/stratodb/src/index/: id.rs  indexed.rs  maintenance.rs  mod.rs  ordered.rs  pattern.rs
crates/stratodb/src/index/definitions/: column.rs  direction.rs  index.rs  misc.rs  mod.rs
crates/stratodb/src/index/registry/: entry.rs  interface.rs  mod.rs  repository.rs
crates/stratodb/src/node/: definition.rs  kind.rs  mod.rs
crates/stratodb/src/path/: functions.rs  into_path.rs  mod.rs  segment.rs  spath.rs  tail.rs
crates/stratodb/src/txn/: mod.rs  query.rs  read.rs  value.rs  write.rs
crates/stratodb/src/txn/rooted/: mod.rs  read.rs  write.rs
crates/stratodb/tests/: containers.rs  coverage_paths.rs  cross_feature.rs  derive.rs  error_paths.rs  export.rs  foundation.rs  index_typed.rs  indexes.rs  rooted.rs  typed.rs  value.rs
