[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/corebreaker/stratodb"

[workspace.metadata.scripts]
fmt = "cargo +nightly fmt --all"
gc = "cargo sweep -r -t 10 ."

[workspace.dependencies]
stratodb-derive = { path = "crates/stratodb-derive", version = "1.0" }
