[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "1.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/corebreaker/stratodb"
readme = "README.md"

[workspace.metadata.scripts]
fmt = "cargo +nightly fmt --all"
gc = "cargo sweep -r -t 10 ."
bench = "cargo bench -p stratodb --features derive"
bench-reports = "cargo bench -p stratodb --features derive --features criterion/html_reports,criterion/plotters,criterion/rayon"

[workspace.dependencies]
stratodb-derive = { path = "crates/stratodb-derive", version = "1.0" }
