[package]
name = "stratodb"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A typed, transactional, indexed document store layered over an embedded key-value engine."

[dependencies]
chrono = "0.4"
lru = "0.18"
num-bigint = { version = "0.4", optional = true }
num-bigfloat = { version = "1.7", optional = true }
num-rational = { version = "0.4", optional = true }
rayon = { version = "1.10", optional = true }
redb = "4.1"
thiserror = "2.0"
uuid = { version = "1.23", features = ["v7"] }

stratodb-derive = { workspace = true, optional = true }

[dev-dependencies]
# Slim build: keep `cargo bench` integration, drop the heavy plotting/HTML-report
# and rayon trees. Benchmarks still produce text output and support baselines
# (`--save-baseline` / `--baseline`) for comparison runs.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3.27"

[features]
default = []
derive = ["dep:stratodb-derive"]
# Parallelize batch operations (e.g. `store_many`) with rayon. Off by default so
# the dependency tree and the standard build/gate stay slim; opt in for bulk loads.
parallel = ["dep:rayon"]
bignum = ["bignum-as-scalar", "bignum-as-data"]
bignum-as-scalar = ["bigint-as-scalar", "bigfloat-as-scalar", "rational-as-scalar"]
bigint-as-scalar = ["dep:num-bigint"]
bigfloat-as-scalar = ["dep:num-bigfloat"]
rational-as-scalar = ["dep:num-rational", "dep:num-bigint"]
bignum-as-data = ["bigint-as-data", "bigfloat-as-data", "rational-as-data"]
bigint-as-data = ["dep:num-bigint"]
bigfloat-as-data = ["dep:num-bigfloat"]
rational-as-data = ["dep:num-rational", "dep:num-bigint"]

[[example]]
name = "indexed"
required-features = ["derive"]

# Benchmarks (criterion). They use a `#[derive(SData)]` entity, so they require the
# `derive` feature: `cargo bench -p stratodb --features derive`. Filter a category
# with, e.g., `cargo bench --features derive --bench reads`.

[[bench]]
name = "reads"
harness = false
required-features = ["derive"]

[[bench]]
name = "writes"
harness = false
required-features = ["derive"]

[[bench]]
name = "modifications"
harness = false
required-features = ["derive"]

[[bench]]
name = "deletes"
harness = false
required-features = ["derive"]

[[bench]]
name = "indexes"
harness = false
required-features = ["derive"]

[[bench]]
name = "dynamic_value"
harness = false
required-features = ["derive"]
